--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,8 @@
 $first: white;
 $second: #090c31;
+$seconds:black;
 $third: #5853ff;
+$fourth:#87CBB9;
 $dark: rgb(44, 44, 44);
 $text1: "Roboto";
 $text2: cursive;
